       configuration in a clustered databse independently for each server.
       E.g. for listening on unique addresses.  See the ovsdb.local-config.5
       manpage for schema details.
     * Returning unused memory to the OS after the database compaction is now
       enabled by default.  Use 'ovsdb-server/memory-trim-on-compaction off'
       unixctl command to disable.
   - OVSDB-IDL:
     * New monitor mode flag, OVSDB_IDL_WRITE_CHANGED_ONLY, allowing
       applications to relax atomicity requirements when dealing with
       columns whose value has been rewritten (but not changed).
   - OpenFlow:
     * Extended Flow Monitoring support for all supported OpenFlow versions:
         OpenFlow versions 1.0-1.2 with Nicira Extensions
         OpenFlow versions 1.3 with Open Network Foundation extension
         OpenFlow versions 1.4+, as defined in the OpenFlow specification
   - IPsec:
     * Added support for custom per-tunnel options via 'options:ipsec_*' knobs.
       See Documentation/tutorials/ipsec.rst for details.
   - Windows:
     * Conntrack support for TCPv6, UDPv6, ICMPv6, FTPv6.
     * IPv6 Geneve tunnel support.
   - DPDK:
     * OVS validated with DPDK 21.11.1.  It is recommended to use this version
       until further releases.
     * Delay creating or reusing a mempool for vhost ports until the VM
       is started. A failure to create a mempool will now be logged only
       when the VM is started.
   - Userspace datapath:
     * Improved multi-thread scalability of the userspace connection tracking.
     * 'dpif-netdev/subtable-lookup-prio-get' appctl command renamed to
       'dpif-netdev/subtable-lookup-info-get' to better reflect its purpose.
       The old variant is kept for backward compatibility.
   - Linux datapath:
     * Add offloading meter tc police.
     * Add support for offloading the check_pkt_len action.


v2.17.0 - 17 Feb 2022
---------------------
   - Userspace datapath: